<resources>
    <string name="app_name">VoxFeed</string>
    <string name="inicio">Inicio</string>
    <string name="publicaciones">Publicaciones</string>
    <string name="help">Ayuda</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome_to_voxfeed">Bienvenido a VoxFeed</string>
    <string name="title_activity_campaign_detail">CampaignDetailActivity</string>
    <string name="campaign_invitation_text">Invitación a campañas</string>
    <string name="go_to_sn_text">Ver publicación en </string>
    <string name="likes">Me gusta</string>
    <string name="clicks">Clics</string>
    <string name="comments">Comentarios</string>
    <string name="shares">Compartido</string>
    <string name="audience">Alcance</string>
</resources>
